--- a/package.json
+++ b/package.json
@@ -2,50 +2,61 @@
   "name": "haste",
   "version": "0.1.0",
   "private": true,
-  "description": "Private Pastebin Server",
+  "description": "Modern hastebin fork",
   "keywords": [
     "paste",
-    "pastebin"
+    "pastebin",
+    "hastebin"
   ],
-  "author": {
-    "name": "John Crepezzi",
-    "email": "john.crepezzi@gmail.com",
-    "url": "http://seejohncode.com/"
-  },
+  "author": "Luke Whrit <me@lukewhrit.xyz> (https://lukewhrit.xyz)",
   "main": "haste",
   "dependencies": {
-    "connect-ratelimit": "0.0.7",
-    "connect-route": "0.1.5",
-    "connect": "3.4.1",
-    "st": "1.1.0",
-    "winston": "0.6.2",
-    "redis-url": "0.1.0",
-    "redis": "0.8.1",
-    "uglify-js": "3.1.6",
-    "busboy": "0.2.4",
-    "pg": "4.1.1"
+    "@koa/multer": "^2.0.2",
+    "@koa/router": "^9.0.0",
+    "@types/koa": "^2.11.3",
+    "@types/koa-static": "^4.0.1",
+    "@types/node": "^13.13.0",
+    "koa": "^2.11.0",
+    "koa-static": "^5.0.0",
+    "multer": "^1.4.2",
+    "sequelize": "^5.21.6"
   },
   "devDependencies": {
-    "mocha": "^4.0.1"
+    "@swc/cli": "^0.1.24",
+    "@swc/core": "^1.1.39",
+    "@typescript-eslint/eslint-plugin": "^2.28.0",
+    "@typescript-eslint/parser": "^2.28.0",
+    "ava": "^3.7.0",
+    "chokidar": "^3.3.1",
+    "cz-conventional-changelog": "3.1.0",
+    "eslint": "^6.8.0",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1"
   },
   "bundledDependencies": [],
   "engines": {
-    "node": "8.1.4",
+    "node": ">8",
     "npm": "5.2.0"
   },
   "bin": {
     "haste-server": "./server.js"
   },
   "files": [
-    "server.js",
-    "lib",
-    "static"
+    "dist/"
   ],
-  "directories": {
-    "lib": "./lib"
-  },
   "scripts": {
-    "start": "node server.js",
-    "test": "mocha --recursive"
+    "watch": "./node_modules/.bin/swc src/ -w -s -d dist/",
+    "build": "./node_modules/.bin/swc src/ -s -d dist/",
+    "start": "yarn build && node dist/glue.js",
+    "test": "",
+    "lint": ""
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
