--- a/package.json
+++ b/package.json
@@ -11,12 +11,19 @@
   "author": "Luke Whrit <me@lukewhrit.xyz> (https://lukewhrit.xyz)",
   "main": "haste",
   "dependencies": {
+    "@hapi/boom": "^9.1.0",
+    "@koa/cors": "2",
     "@koa/multer": "^2.0.2",
     "@koa/router": "^9.0.0",
     "@types/koa": "^2.11.3",
+    "@types/koa-morgan": "^1.0.4",
     "@types/koa-static": "^4.0.1",
+    "@types/koa__cors": "^3.0.1",
+    "@types/koa__router": "^8.0.2",
     "@types/node": "^13.13.0",
     "koa": "^2.11.0",
+    "koa-body": "^4.1.1",
+    "koa-morgan": "^1.0.1",
     "koa-static": "^5.0.0",
     "multer": "^1.4.2",
     "sequelize": "^5.21.6"
@@ -26,7 +33,6 @@
     "@swc/core": "^1.1.39",
     "@typescript-eslint/eslint-plugin": "^2.28.0",
     "@typescript-eslint/parser": "^2.28.0",
-    "ava": "^3.7.0",
     "chokidar": "^3.3.1",
     "cz-conventional-changelog": "3.1.0",
     "eslint": "^6.8.0",
@@ -34,7 +40,8 @@
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1"
+    "eslint-plugin-standard": "^4.0.1",
+    "ts-node": "^8.8.2"
   },
   "bundledDependencies": [],
   "engines": {
@@ -48,7 +55,7 @@
     "dist/"
   ],
   "scripts": {
-    "watch": "./node_modules/.bin/swc src/ -w -s -d dist/",
+    "watch": "nodemon --watch 'src/**/*' --ignore 'src/**/*.spec.ts' --exec ts-node src/Glue.ts",
     "build": "./node_modules/.bin/swc src/ -s -d dist/",
     "start": "yarn build && node dist/glue.js",
     "test": "",
