--- a/package.json
+++ b/package.json
@@ -46,8 +46,7 @@
   },
   "bundledDependencies": [],
   "engines": {
-    "node": ">8",
-    "npm": "5.2.0"
+    "node": ">=8"
   },
   "bin": {
     "haste-server": "./server.js"
