--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
   "bundledDependencies": [],
   "engines": {
     "node": ">=8.0.0",
-    "yarn": "^0.4.0"
+    "yarn": ">=0.14.0"
   },
   "bin": {
     "haste-server": "./server.js"
