--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "koa-morgan": "^1.0.1",
     "koa-static": "^5.0.0",
     "multer": "^1.4.2",
-    "sequelize": "^5.21.6"
+    "sqlite3": "^4.1.1",
+    "typescript": "^3.8.3"
   },
   "devDependencies": {
     "@swc/cli": "^0.1.24",
