--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "main": "src/Glue.ts",
   "dependencies": {
     "@hapi/boom": "^9.1.0",
-    "@koa/cors": "2",
+    "@koa/cors": "^3.0.0",
     "@koa/multer": "^2.0.2",
     "@koa/router": "^8.0.8",
     "@types/bookshelf": "^1.1.0",
@@ -22,14 +22,12 @@
     "@types/koa__cors": "^3.0.1",
     "@types/koa__router": "^8.0.2",
     "@types/node": "^13.13.0",
-    "bookshelf": "^1.1.1",
     "knex": "^0.21.0",
     "koa": "^2.11.0",
     "koa-body": "^4.1.1",
     "koa-morgan": "^1.0.1",
     "koa-static": "^5.0.0",
     "multer": "^1.4.2",
-    "sqlite3": "^4.1.1",
     "typescript": "^3.8.3"
   },
   "devDependencies": {
@@ -46,6 +44,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
+    "nodemon": "^2.0.3",
     "ts-node": "^8.8.2"
   },
   "bundledDependencies": [],
@@ -60,7 +59,8 @@
     "build": "./node_modules/.bin/swc src/ -s -d dist/",
     "start": "yarn build && node dist/glue.js",
     "test": "yarn build && ava",
-    "lint": "eslint src/"
+    "lint": "eslint src/**/*",
+    "lint:fix": "eslint src/**/* --fix"
   },
   "config": {
     "commitizen": {
