--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "@types/koa-static": "^4.0.1",
     "@types/koa__cors": "^3.0.1",
     "@types/koa__router": "^8.0.2",
+    "@types/mongoose": "^5.7.18",
     "@types/node": "^13.13.0",
     "knex": "^0.21.0",
     "koa": "^2.11.0",
     "koa-body": "^4.1.1",
     "koa-morgan": "^1.0.1",
     "koa-static": "^5.0.0",
+    "mongoose": "^5.9.13",
     "multer": "^1.4.2",
     "typescript": "^3.8.3"
   },
