feat: implement base functionality for database
This does not add an API route for modifying the database, that will come in a future commit.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,9 @@
     "alwaysStrict": true,
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "strictPropertyInitialization": false
   }
 }
