--- a/package.json
+++ b/package.json
@@ -20,14 +20,14 @@
     "@types/koa-static": "^4.0.1",
     "@types/koa__cors": "^3.0.1",
     "@types/koa__router": "^8.0.2",
-    "@types/mongoose": "^5.7.18",
-    "@types/node": "^13.13.0",
+    "@types/node": "^14.0.5",
     "koa": "^2.11.0",
     "koa-body": "^4.1.1",
     "koa-morgan": "^1.0.1",
     "koa-static": "^5.0.0",
-    "mongoose": "^5.9.13",
     "multer": "^1.4.2",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.2.25",
     "typescript": "^3.8.3"
   },
   "devDependencies": {
@@ -47,7 +47,9 @@
     "nodemon": "^2.0.3",
     "ts-node": "^8.8.2"
   },
-  "bundledDependencies": [],
+  "optionalDependencies": {
+    "sqlite3": "^4.2.0"
+  },
   "engines": {
     "node": ">=10.0.0"
   },
