--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@koa/router": "^8.0.8",
     "@types/koa": "^2.11.3",
     "@types/koa-morgan": "^1.0.4",
+    "@types/koa-ratelimit": "^4.2.1",
     "@types/koa-static": "^4.0.1",
     "@types/koa__cors": "^3.0.1",
     "@types/koa__router": "^8.0.2",
@@ -24,6 +25,7 @@
     "koa": "^2.11.0",
     "koa-body": "^4.1.1",
     "koa-morgan": "^1.0.1",
+    "koa-ratelimit": "^4.2.1",
     "koa-static": "^5.0.0",
     "multer": "^1.4.2",
     "reflect-metadata": "^0.1.13",
