--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "typescript": "^3.8.3"
   },
   "devDependencies": {
+    "@commitlint/cli": "^8.3.5",
+    "@commitlint/config-conventional": "^8.3.4",
     "@swc/cli": "^0.1.24",
     "@swc/core": "^1.1.39",
     "@types/koa-helmet": "^5.2.0",
@@ -46,6 +48,8 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
+    "husky": "^4.2.5",
+    "lint-staged": "^10.2.7",
     "nodemon": "^2.0.3",
     "ts-node": "^8.8.2"
   },
@@ -63,12 +67,23 @@
     "build": "./node_modules/.bin/swc src/ -s -d dist/",
     "start": "yarn build && node dist/server.js",
     "test": "yarn build && ava",
-    "lint": "eslint src/**/*",
-    "lint:fix": "eslint src/**/* --fix"
+    "lint": "eslint --ext .js,.ts .",
+    "lint:fix": "eslint --ext .js,.ts . --fix"
   },
   "config": {
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged",
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
+  },
+  "lint-staged": {
+    "*.{js,ts}": [
+      "yarn lint --fix"
+    ]
   }
 }
