--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
   "main": "src/server.ts",
   "dependencies": {
     "@koa/cors": "^3.0.0",
-    "@koa/multer": "^2.0.2",
     "@koa/router": "^8.0.8",
     "koa": "^2.11.0",
     "koa-body": "^4.1.1",
     "koa-helmet": "^5.2.0",
     "koa-morgan": "^1.0.1",
     "koa-ratelimit": "^4.2.1",
+    "randomstring": "^1.1.5",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.25"
   },
@@ -34,6 +34,7 @@
     "@types/koa__cors": "^3.0.1",
     "@types/koa__router": "^8.0.2",
     "@types/node": "^14.0.5",
+    "@types/randomstring": "^1.1.6",
     "@typescript-eslint/eslint-plugin": "^2.28.0",
     "@typescript-eslint/parser": "^2.28.0",
     "ava": "^3.7.1",
