chore(linter-config): cleanup eslint config
remove globals field, empty rules field, etc

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,18 +1,13 @@
 {
   "env": {
     "es6": true,
-    "node": true,
-    "browser": true
+    "node": true
   },
   "extends": [
     "standard",
     "plugin:@typescript-eslint/eslint-recommended",
     "plugin:@typescript-eslint/recommended"
   ],
-  "globals": {
-    "Atomics": "readonly",
-    "SharedArrayBuffer": "readonly"
-  },
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaVersion": 2018,
@@ -20,7 +15,5 @@
   },
   "plugins": [
     "@typescript-eslint"
-  ],
-  "rules": {
-  }
+  ]
 }
