--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,9 @@ lerna-debug.log*
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
+# Force yarn on remote
+package-lock.json
+
 # Runtime data
 pids
 *.pid
