--- a/.editorconfig
+++ b/.editorconfig
@@ -6,4 +6,7 @@ indent_size = 2
 charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
-end_of_line = crlf
+end_of_line = lf
+
+[*.md]
+trim_trailing_whitespace = false
