--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@324luke/spacebin",
-  "version": "0.1.0",
+  "version": "0.0.0",
   "private": true,
   "description": "Modern hastebin fork",
   "keywords": [
@@ -12,11 +12,11 @@
   "main": "src/server.ts",
   "dependencies": {
     "@koa/cors": "^3.0.0",
-    "@koa/router": "^9.0.1",
     "@types/koa-bodyparser": "^4.3.0",
     "koa": "^2.11.0",
     "koa-bodyparser": "^4.3.0",
     "koa-helmet": "^5.2.0",
+    "koa-joi-router": "^6.0.2",
     "koa-morgan": "^1.0.1",
     "koa-ratelimit": "^4.2.1",
     "randomstring": "^1.1.5",
@@ -28,10 +28,10 @@
     "@commitlint/config-conventional": "^8.3.4",
     "@types/koa": "^2.11.3",
     "@types/koa-helmet": "^5.2.0",
+    "@types/koa-joi-router": "^5.2.3",
     "@types/koa-morgan": "^1.0.4",
     "@types/koa-ratelimit": "^4.2.1",
     "@types/koa__cors": "^3.0.1",
-    "@types/koa__router": "^8.0.2",
     "@types/node": "^14.0.13",
     "@types/randomstring": "^1.1.6",
     "@typescript-eslint/eslint-plugin": "^2.28.0",
