--- a/package.json
+++ b/package.json
@@ -12,6 +12,14 @@
     }
   ],
   "main": "src/server.ts",
+  "scripts": {
+    "dev": "cross-env NODE_ENV=development nodemon --watch 'src/**/*' --ignore 'src/**/*.spec.ts' --exec \"ts-node src/server.ts\"",
+    "build": "./node_modules/.bin/tsc --outDir dist --project ./ --pretty",
+    "start": "yarn build && cross-env NODE_ENV=production node dist/server.js",
+    "test": "jest",
+    "lint": "eslint --ext .js,.ts .",
+    "lint:fix": "eslint --ext .js,.ts . --fix"
+  },
   "dependencies": {
     "@koa/cors": "^3.0.0",
     "@types/koa-bodyparser": "^4.3.0",
@@ -28,6 +36,7 @@
   "devDependencies": {
     "@commitlint/cli": "^9.0.1",
     "@commitlint/config-conventional": "^9.0.1",
+    "@types/jest": "^26.0.3",
     "@types/koa": "^2.11.3",
     "@types/koa-helmet": "^5.2.0",
     "@types/koa-joi-router": "^5.2.3",
@@ -38,7 +47,6 @@
     "@types/randomstring": "^1.1.6",
     "@typescript-eslint/eslint-plugin": "^2.28.0",
     "@typescript-eslint/parser": "^2.28.0",
-    "ava": "^3.9.0",
     "cross-env": "^7.0.2",
     "cz-conventional-changelog": "3.2.0",
     "eslint": "^6.8.0",
@@ -48,24 +56,15 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
     "husky": "^4.2.5",
+    "jest": "^26.1.0",
     "lint-staged": "^10.2.11",
     "nodemon": "^2.0.3",
+    "ts-jest": "^26.1.1",
     "ts-node": "^8.8.2",
     "typescript": "^3.9.6"
   },
   "optionalDependencies": {
     "sqlite3": "^5.0.0"
-  },
-  "engines": {
-    "node": ">=10.0.0"
-  },
-  "scripts": {
-    "dev": "cross-env NODE_ENV=development nodemon --watch 'src/**/*' --ignore 'src/**/*.spec.ts' --exec \"ts-node src/server.ts\"",
-    "build": "./node_modules/.bin/tsc --outDir dist --project ./ --pretty",
-    "start": "yarn build && cross-env NODE_ENV=production node dist/server.js",
-    "test": "yarn build && ava",
-    "lint": "eslint --ext .js,.ts .",
-    "lint:fix": "eslint --ext .js,.ts . --fix"
   },
   "config": {
     "commitizen": {
@@ -82,5 +81,8 @@
     "*.{js,ts}": [
       "yarn lint --fix"
     ]
+  },
+  "engines": {
+    "node": ">=10.0.0"
   }
 }
