--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "lint:fix": "eslint --ext .js,.ts . --fix"
   },
   "dependencies": {
-    "@koa/cors": "^3.0.0",
     "@types/koa-bodyparser": "^4.3.0",
-    "koa": "^2.13.0",
+    "chalk": "^4.1.0",
+    "express": "^4.17.1",
     "koa-bodyparser": "^4.3.0",
     "koa-helmet": "^5.2.0",
     "koa-joi-router": "^6.0.2",
@@ -31,6 +31,7 @@
     "koa-ratelimit": "^4.2.1",
     "randomstring": "^1.1.5",
     "reflect-metadata": "^0.1.13",
+    "response-time": "^2.3.2",
     "typeorm": "^0.2.25"
   },
   "devDependencies": {
@@ -45,6 +46,7 @@
     "@types/koa__cors": "^3.0.1",
     "@types/node": "^14.0.22",
     "@types/randomstring": "^1.1.6",
+    "@types/response-time": "^2.3.4",
     "@typescript-eslint/eslint-plugin": "^2.28.0",
     "@typescript-eslint/parser": "^2.28.0",
     "cross-env": "^7.0.2",
