--- a/package.json
+++ b/package.json
@@ -21,9 +21,14 @@
     "lint:fix": "eslint --ext .js,.ts . --fix"
   },
   "dependencies": {
+    "@types/express-rate-limit": "^5.0.0",
     "@types/koa-bodyparser": "^4.3.0",
+    "body-parser": "^1.19.0",
     "chalk": "^4.1.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-rate-limit": "^5.1.3",
+    "helmet": "^3.23.3",
     "koa-bodyparser": "^4.3.0",
     "koa-helmet": "^5.2.0",
     "koa-joi-router": "^6.0.2",
@@ -37,13 +42,9 @@
   "devDependencies": {
     "@commitlint/cli": "^9.0.1",
     "@commitlint/config-conventional": "^9.0.1",
+    "@types/cors": "^2.8.6",
+    "@types/helmet": "^0.0.47",
     "@types/jest": "^26.0.4",
-    "@types/koa": "^2.11.3",
-    "@types/koa-helmet": "^5.2.0",
-    "@types/koa-joi-router": "^5.2.3",
-    "@types/koa-morgan": "^1.0.4",
-    "@types/koa-ratelimit": "^4.2.1",
-    "@types/koa__cors": "^3.0.1",
     "@types/node": "^14.0.22",
     "@types/randomstring": "^1.1.6",
     "@types/response-time": "^2.3.4",
