--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,36 @@
-Adding pattern(s) to: .gitignore
-... adding 'go'
-go
+# Created by https://www.toptal.com/developers/gitignore/api/go
+
+### Environment ###
+
+# Editor files
+.idea
+.vscode
+
+# OS files
+.DS_Store
+.desktop
+
+### Go ###
+
+# Binaries for programs and plugins
+*.exe
+*.exe~
+*.dll
+*.so
+*.dylib
+
+# Test binary, built with `go test -c`
+*.test
+
+# Output of the go coverage tool, specifically when used with LiteIDE
+*.out
+
+# Dependency directories (remove the comment below to include it)
+# vendor/
+
+### Go Patch ###
+
+/vendor/
+/Godeps/
+
+# End of https://www.toptal.com/developers/gitignore/api/go
