chore(package.json): cleanup (remove unused deps, etc)

--- a/package.json
+++ b/package.json
@@ -13,29 +13,22 @@
   ],
   "main": "src/server.ts",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development nodemon --watch 'src/**/*' --ignore 'src/**/*.spec.ts' --exec \"ts-node src/server.ts\"",
-    "build": "./node_modules/.bin/tsc --outDir dist --project ./ --pretty",
-    "start": "yarn build && cross-env NODE_ENV=production node dist/server.js",
-    "test": "jest",
-    "lint": "eslint --ext .js,.ts .",
-    "lint:fix": "eslint --ext .js,.ts . --fix"
+    "dev": "yarn cross-env NODE_ENV=development yarn nodemon --watch 'src/**/*.ts' --ignore 'src/__tests__/*.ts' --exec \"ts-node src/server.ts\"",
+    "build": "yarn tsc --outDir dist --project ./ --pretty",
+    "start": "yarn build && yarn cross-env NODE_ENV=production node dist/server.js",
+    "test": "yarn jest",
+    "lint": "yarn eslint --ext .js,.ts ."
   },
   "dependencies": {
     "@hapi/joi": "^17.1.1",
     "@types/express-rate-limit": "^5.0.0",
     "@types/hapi__joi": "^17.1.4",
-    "@types/koa-bodyparser": "^4.3.0",
     "body-parser": "^1.19.0",
     "chalk": "^4.1.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-rate-limit": "^5.1.3",
     "helmet": "^3.23.3",
-    "koa-bodyparser": "^4.3.0",
-    "koa-helmet": "^5.2.0",
-    "koa-joi-router": "^6.0.2",
-    "koa-morgan": "^1.0.1",
-    "koa-ratelimit": "^4.2.1",
     "randomstring": "^1.1.5",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.25"
