--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "@hapi/joi": "^17.1.1",
     "@types/express-rate-limit": "^5.0.0",
     "@types/hapi__joi": "^17.1.4",
+    "@types/multer": "^1.4.3",
     "body-parser": "^1.19.0",
     "chalk": "^4.1.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-rate-limit": "^5.1.3",
     "helmet": "^3.23.3",
+    "multer": "^1.4.2",
     "randomstring": "^1.1.5",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.25"
