--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@types/jest": "^26.0.4",
     "@types/node": "^14.0.22",
     "@types/randomstring": "^1.1.6",
+    "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^2.28.0",
     "@typescript-eslint/parser": "^2.28.0",
     "cross-env": "^7.0.2",
@@ -57,6 +58,7 @@
     "jest": "^26.1.0",
     "lint-staged": "^10.2.11",
     "nodemon": "^2.0.3",
+    "supertest": "^4.0.2",
     "ts-jest": "^26.1.2",
     "ts-node": "^8.8.2",
     "typescript": "^3.9.7"
