feat: setup models and connection logic for gorm

--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,11 @@ certs/
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
+# SQLite Databases
+*.db
+*.sqlite
+*.sqlite3
+
 # Dependency directories (remove the comment below to include it)
 # vendor/
 
