--- a/config.toml
+++ b/config.toml
@@ -17,5 +17,5 @@ id_length = 12
 max_document_length = 400_000
 
 [database] # Gorm Configuration Options
-dialect = "mysql"
-connection_uri = "user:password@/dbname?charset=utf8&parseTime=True&loc=Local"
+dialect = "sqlite3"
+connection_uri = "./spacebin.db"
