style(config): cleanup

--- a/config.toml
+++ b/config.toml
@@ -2,11 +2,11 @@
 host = "0.0.0.0"
 port = 9000
 use_csp = true
-compress_level = -1 # Docs: https://git.io/JJBUo
+compress_level = 1 # Docs: https://git.io/JJBUo
 
-	[server.ratelimits]
-	requests = 500
-	duration = 60_000
+[server.ratelimits]
+requests = 80
+duration = 60_000
 
 [documents]
 id_length = 12
@@ -14,4 +14,4 @@ max_document_length = 400_000
 
 [database] # Gorm Configuration Options
 dialect = "sqlite3"
-connection_uri = "./spacebin.db"
+connection_uri = "spacebin.db"
