--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "lint": "yarn eslint --ext .js,.ts ."
   },
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
     "@types/express-rate-limit": "^5.0.0",
     "@types/hapi__joi": "^17.1.4",
     "@types/multer": "^1.4.3",
@@ -29,7 +30,6 @@
     "express": "^4.17.1",
     "express-rate-limit": "^5.1.3",
     "helmet": "^3.23.3",
-    "joi": "^17.1.1",
     "multer": "^1.4.2",
     "randomstring": "^1.1.5",
     "reflect-metadata": "^0.1.13",
