--- a/config.toml
+++ b/config.toml
@@ -3,16 +3,17 @@ host = "127.0.0.1"
 port = 9000
 use_csp = true
 compress_level = 1 # Docs: https://git.io/JJBUo
-prefork = false
+prefork = false # if true spacebin will run across multiple processes
 
 [server.ratelimits]
 requests = 80
-duration = 60_000
+duration = 60_000 # in ms
 
 [database]
-dialect = "sqlite"
+dialect = "sqlite" # possible: mysql, sqlite, postgresql
 connection_uri = "spacebin.db"
 
 [documents]
 id_length = 12
-max_document_length = 400_000
+max_document_length = 400_000 # in bytes
+max_age = 90 # in days
