--- a/.editorconfig
+++ b/.editorconfig
@@ -1,16 +1,20 @@
+# editorconfig.org
 root = true
 
 [*]
-indent_style = tab
-indent_size = 4
 charset = utf-8
-trim_trailing_whitespace = true
 insert_final_newline = true
-end_of_line = lf
+trim_trailing_whitespace = true
+indent_style = space
+indent_size = 4
+
+[{Makefile,go.mod,go.sum,*.go,.gitmodules}]
+indent_style = tab
 
 [*.md]
+indent_size = 4
 trim_trailing_whitespace = false
+eclint_indent_style = unset
 
-[*.yml]
-indent_style = space
+[*{.toml,.json,.yaml,.yml}]
 indent_size = 2
