--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -62,3 +62,17 @@ jobs:
           GOARCH: amd64
           GOOS: windows
           EXTRA_FILES: 'license'
+  docker:
+    name: publish to docker
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@master
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Build and push Docker images
+        uses: docker/build-push-action@v3.2.0
