build(dependabot): change target branch
We only really want to target the develop branch since main should only include the source of the latest release

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,8 +3,8 @@ updates:
   - package-ecosystem: gomod
     directory: "/"
     schedule:
-      interval: daily
-      time: "13:00"
+      interval: weekly
+    target-branch: develop
     open-pull-requests-limit: 10
     reviewers:
       - lukewhrit
