--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,9 +10,6 @@ jobs:
       - name: setup go
         uses: actions/setup-go@v2
         with:
-          go-version: 1.15.2
-      - name: run mage
-        uses: magefile/mage-action@v1
-        with:
-          version: latest
-          args: build
+          go-version: 1.19.4
+      - name: run make
+        run: make build
