--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -2,7 +2,7 @@ name: Format
 on: [push, pull_request]
 
 jobs:
-  mage:
+  format:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
